<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_config_helper</name>
  <version>0.0.0</version>
  <description>Tool to generate a DDS profiles file based on the result of a questionary.</description>

  <maintainer email="ivanpauno@ekumenlabs.com">Ivan Paunovic</maintainer>

  <license>Apache License 2.0</license>

  <author email="ivanpauno@ekumenlabs.com">Ivan Paunovic</author>

  <exec_depend>python3-lxml</exec_depend>
  <exec_depend>python3-netifaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
